force-app/main/default/objects/Reports_Sceduled__c/Reports_Sceduled__c.object-meta.xml
<CustomObject>
    <label>Reports Sceduled</label>
    <nameField>
        <displayFormat>R S - {0000}</displayFormat>
        <label>R S</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reports Sceduled</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>