force-app/main/default/objects/Reports_Sceduled__c/fields/Report_Id__c.field-meta.xml
<CustomField>
    <fullName>Report_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Report Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>