force-app/main/default/objects/Reports_Sceduled__c/fields/Scheduled_Times__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Times__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Times</label>
    <referenceTo>Scheduled_Times__c</referenceTo>
    <relationshipLabel>Reports Sceduled</relationshipLabel>
    <relationshipName>Reports_Sceduled</relationshipName>
    <type>Lookup</type>
</CustomField>