force-app/main/default/objects/Reports_Sceduled__c/fields/Scheduler__c.field-meta.xml
<CustomField>
    <fullName>Scheduler__c</fullName>
    <label>Scheduler</label>
    <referenceTo>Schedule_Report__c</referenceTo>
    <relationshipLabel>Reports Sceduled</relationshipLabel>
    <relationshipName>Reports_Sceduled</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>